<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin_lay_names_1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_reflector"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin_lay_1"
        android:layout_below="@+id/lin_lay_names_1">

        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/reflector">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor3">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor2">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor1">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lin_lay_1"
        android:id="@+id/lin_lay_names_2">

        <Space
            android:layout_width="0dp"
            android:layout_weight=".125"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor3_position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor2_position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor1_position"/>
        <Space
            android:layout_width="0dp"
            android:layout_weight=".125"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin_lay_2"
        android:layout_below="@+id/lin_lay_names_2">

        <Space
            android:layout_width="0dp"
            android:layout_weight=".125"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor3position">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor2position">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:id="@+id/rotor1position">
        </Spinner>
        <Space
            android:layout_width="0dp"
            android:layout_weight=".125"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_2"
        android:layout_above="@+id/buttons_lay"
        android:id="@+id/text_layer">
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:id="@+id/input"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="@string/hint_enigma_type_here" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textIsSelectable="true"
            android:id="@+id/output"
            android:hint="@string/hint_enigma_code"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_lay"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_weight="50"
            android:text="@string/title_plugboard_dialog"
            android:id="@+id/button_plugboard"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:id="@+id/button_crypt"
            android:onClick="doCrypto"
            android:text="@string/button_crypt"
            android:background="@drawable/button_orange"
            />
        </LinearLayout>

</RelativeLayout>
