<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lin_lay_1"
        android:id="@+id/lin_lay_names_2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_reflector_position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor3_position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor2_position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_rotor1_position"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lin_lay_2"
        android:layout_below="@+id/lin_lay_names_2">

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/reflector_position">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rotor3position">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rotor2position">
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rotor1position">
        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_enigma_reflector_wiring"
        android:id="@+id/hint_wiring"
        android:layout_below="@id/lin_lay_2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:id="@+id/reflector_wiring"
        android:inputType="textNoSuggestions"
        android:hint="@string/hint_enigma_reflector_wiring"
        android:layout_below="@+id/hint_wiring"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reflector_wiring"
        android:layout_above="@+id/buttons_lay"
        android:id="@+id/text_layer">
        <EditText
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:id="@+id/input"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="@string/hint_enigma_type_here" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textIsSelectable="true"
            android:id="@+id/output"
            android:hint="@string/hint_enigma_code"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_lay"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_crypt"
            android:onClick="doCrypto"
            android:text="@string/button_crypt"
            android:background="@drawable/button"
            />
        </LinearLayout>

</RelativeLayout>
